--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@baronha/react-native-photo-editor": "^1.1.6",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@react-native-async-storage/async-storage": "1.18.2",
@@ -25,6 +26,7 @@
     "react-native": "0.72.6",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-image-crop-picker": "^0.40.2",
     "react-native-image-manipulator": "^1.0.6",
     "react-native-image-picker": "^7.1.0",
     "react-native-permissions": "^3.10.1",
